--- a/style.css
+++ b/style.css
@@ -89,3 +89,38 @@ nav ul li a button {
   width: 480px;
   border-radius: 15px;
 }
+/*productive users styles*/
+.user-satisfaction {
+  display: flex;
+  justify-content: space-around;
+}
+.users {
+  background-color: #fff;
+  margin: 30px;
+}
+.user-info {
+  background-color: lightsteelblue;
+  border-radius: 50px;
+  padding: 50px 0px 20px 20px;
+}
+.user-info-h2 {
+  padding: 30px 0px 0px 0px;
+  text-align: center;
+  margin: 0 auto;
+  font-size: 30px;
+}
+.user-h1 {
+  font-size: 70px;
+}
+.active-users,
+.focus-sessions,
+.satisfaction-rate {
+  margin: 0 auto;
+  padding: 0;
+}
+
+/*review section styles*/
+.review-h1 {
+  font-size: 35px;
+  text-align: center;
+}
