--- a/style.css
+++ b/style.css
@@ -48,6 +48,9 @@ nav ul li a button {
   border-radius: 10px;
   padding: 15px 30px;
 }
+.btn-primary:hover {
+  background-color: rgb(168, 131, 168);
+}
 .text-color {
   color: #252432;
 }
@@ -65,12 +68,14 @@ nav ul li a button {
   padding: 15px 30px;
   margin: 20px;
 }
+
 /*action sction styles*/
 .action {
   display: flex;
   justify-content: space-around;
-  padding: 60px;
   background-color: lightcyan;
+  margin: 30px 0;
+  padding: 60px 90px;
 }
 .h3-action {
   font-size: 35px;
@@ -89,20 +94,22 @@ nav ul li a button {
   width: 480px;
   border-radius: 15px;
 }
+
 /*productive users styles*/
+.users {
+  background-color: lightcyan;
+  margin: 30px 0;
+  padding: 60px 90px;
+}
+.user-info {
+  background-color: lavender;
+  border-radius: 50px;
+}
 .user-satisfaction {
   display: flex;
   justify-content: space-around;
 }
-.users {
-  background-color: #fff;
-  margin: 30px;
-  padding: 40px 70px;
-}
-.user-info {
-  background-color: lightsteelblue;
-  border-radius: 50px;
-}
+
 .user-info-h2 {
   padding: 30px 0px 0px 0px;
   text-align: center;
